--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "scripts": {
     "analyze": "npm run build && cem analyze --globs demo/src/**/*.js --outdir demo",
     "changeset": "changeset add",
-    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "build": "npm run generate-types && tsup src/index.ts --dts --format cjs,esm",
     "clean": "git clean -fdX",
     "demo": "npm run build && node ./demo/validated.js",
     "deploy": "npm run build && npm publish",
     "format": "prettier . --write",
+    "generate-types": "node scripts/generate-builtin-types.js",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "test": "vitest --run --passWithNoTests",
